tests/m20.out
Error type A at Line 4: unterminated comment.
Error type B at Line 4: syntax error.
