tests/m20.cmm
int main(){
  /*نې///*مىشقا ماسكا تاقىمايسىز؟
}
